--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -30,7 +30,7 @@ else
             <h2 class="m-0">
 
                 <a href="" onclick='showProfile(@item.doctorID)' class="thumbnail-col-inner m-b-15" data-toggle="modal" data-target="#myModal8" style="word-wrap: break-word;font-size: 12px">
-                    Dr.@item.firstName &nbsp; @item.lastName
+                    Dr.@item.firstName @item.lastName
                 </a>
 
             </h2>
